@@ -23,7 +23,7 @@
 
 """A simple CArray."""
 
-import numpy
+import numpy as np
 import tables
 
 fileName = 'carray_sample.h5'
@@ -33,5 +33,5 @@ filters = tables.Filters(complevel=5, complib='zlib')
 
 h5f = tables.open_file(fileName, 'w')
 ca = h5f.create_carray(h5f.root, 'carray', atom, shape, filters=filters)
-ca[10:60, 20:70] = numpy.ones((50, 50))
+ca[10:60, 20:70] = np.ones((50, 50))
 h5f.close()
