@@ -20,7 +20,7 @@
 
 "This creates an HDF5 file with a potentially large number of objects"
 
-import numpy
+import numpy as np
 import tables
 
 filename = 'large_number_of_objects.h5'
@@ -39,7 +39,7 @@ nlevels, ngroups, ndatasets = (3, 10, 100)
 #nlevels, ngroups, ndatasets = (30, 10, 10)
 
 # Create an Array to save on disk
-a = numpy.array([-1, 2, 4], dtype=numpy.int16)
+a = np.array([-1, 2, 4], dtype=np.int16)
 
 group = fileh.root
 group2 = fileh.root
